--- a/Taylr/AVKit/Base.lproj/AVKit.storyboard
+++ b/Taylr/AVKit/Base.lproj/AVKit.storyboard
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0DE-rZ-SWb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0DE-rZ-SWb">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <mutableArray key="Cabin-Bold.ttf">
+            <string>Cabin-Bold</string>
+        </mutableArray>
         <mutableArray key="Cabin-Regular.ttf">
             <string>Cabin-Regular</string>
             <string>Cabin-Regular</string>
@@ -38,7 +41,28 @@
                                     <outletCollection property="gestureRecognizers" destination="TqC-gW-J05" appends="YES" id="jpa-YR-Sbx"/>
                                 </connections>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gUP-YK-Qgv" userLabel="Save">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="92U-XD-Hhd" userLabel="Overlay" customClass="TransparentView" customModule="Taylr" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="My Caption" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="srw-lj-jAO">
+                                        <rect key="frame" x="0.0" y="272" width="600" height="56"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="56" id="smX-L1-Uxg"/>
+                                        </constraints>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" name="Cabin-Bold" family="Cabin" pointSize="30"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="srw-lj-jAO" secondAttribute="trailing" id="CxA-XX-Z4Y"/>
+                                    <constraint firstItem="srw-lj-jAO" firstAttribute="centerY" secondItem="92U-XD-Hhd" secondAttribute="centerY" id="y8K-NK-W7b"/>
+                                    <constraint firstItem="srw-lj-jAO" firstAttribute="leading" secondItem="92U-XD-Hhd" secondAttribute="leading" id="zd9-Xb-t2R"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gUP-YK-Qgv" userLabel="Save">
                                 <rect key="frame" x="16" y="76" width="40" height="40"/>
                                 <state key="normal" image="ic-save-round">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -47,7 +71,7 @@
                                     <action selector="saveToCameraRoll:" destination="uPv-0o-aed" eventType="touchUpInside" id="I45-9D-zuc"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ahy-43-dzw" userLabel="Close">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ahy-43-dzw" userLabel="Close">
                                 <rect key="frame" x="16" y="538" width="50" height="50"/>
                                 <state key="normal" image="ic-cancel-round">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -56,7 +80,7 @@
                                     <action selector="cancelEditing:" destination="uPv-0o-aed" eventType="touchUpInside" id="x2y-mV-LHa"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xwQ-nI-9Ji" userLabel="Send">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xwQ-nI-9Ji" userLabel="Send">
                                 <rect key="frame" x="534" y="538" width="50" height="50"/>
                                 <state key="normal" image="ic-send-round">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -74,18 +98,24 @@
                             <constraint firstItem="gUP-YK-Qgv" firstAttribute="leading" secondItem="Ahy-43-dzw" secondAttribute="leading" id="9TQ-dd-FMs"/>
                             <constraint firstAttribute="bottom" secondItem="jrS-6I-cjW" secondAttribute="bottom" id="BBw-sA-faP"/>
                             <constraint firstAttribute="trailing" secondItem="jrS-6I-cjW" secondAttribute="trailing" id="CoB-i3-2n0"/>
+                            <constraint firstAttribute="trailing" secondItem="92U-XD-Hhd" secondAttribute="trailing" id="F6L-Tn-f6N"/>
+                            <constraint firstItem="92U-XD-Hhd" firstAttribute="top" secondItem="Mm1-nh-CJO" secondAttribute="top" id="Hrn-UM-UnF"/>
                             <constraint firstItem="gUP-YK-Qgv" firstAttribute="top" secondItem="Wdl-9Q-6Ta" secondAttribute="bottom" constant="12" id="LpR-ke-rd3"/>
                             <constraint firstItem="xwQ-nI-9Ji" firstAttribute="bottom" secondItem="Ahy-43-dzw" secondAttribute="bottom" id="U62-Bk-UTE"/>
+                            <constraint firstAttribute="bottom" secondItem="92U-XD-Hhd" secondAttribute="bottom" id="UYt-FI-yW4"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xwQ-nI-9Ji" secondAttribute="trailing" id="XVI-KV-UGc"/>
                             <constraint firstItem="Ahy-43-dzw" firstAttribute="leading" secondItem="Mm1-nh-CJO" secondAttribute="leadingMargin" id="b8G-VH-qIq"/>
                             <constraint firstItem="ccj-Kj-OsA" firstAttribute="top" secondItem="Ahy-43-dzw" secondAttribute="bottom" constant="12" id="bEN-zB-UK1"/>
+                            <constraint firstItem="92U-XD-Hhd" firstAttribute="leading" secondItem="Mm1-nh-CJO" secondAttribute="leading" id="kzA-HI-sMr"/>
                             <constraint firstAttribute="trailing" secondItem="Wdl-9Q-6Ta" secondAttribute="trailing" id="lms-lh-Du9"/>
                             <constraint firstItem="Wdl-9Q-6Ta" firstAttribute="leading" secondItem="Mm1-nh-CJO" secondAttribute="leading" id="r7B-zR-BbH"/>
                             <constraint firstItem="jrS-6I-cjW" firstAttribute="top" secondItem="Mm1-nh-CJO" secondAttribute="top" id="yaL-0W-3Og"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="captionField" destination="srw-lj-jAO" id="TGK-JO-vSj"/>
                         <outlet property="filterView" destination="jrS-6I-cjW" id="m1Y-7N-7EG"/>
+                        <outlet property="overlayView" destination="92U-XD-Hhd" id="Pt9-Nx-aPh"/>
                         <outlet property="topLayoutHeight" destination="dIP-46-eYt" id="D3K-gQ-YzK"/>
                     </connections>
                 </viewController>
